--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <li><a href="#"> Education </a></li>
             <li><a href="#"> Works</a></li>
             <li><a href="#"> Experience</a></li>
-            <li><a href="#"> Contact </a></li>
+            <button class="contact-button"><a href="#">Contact Me</a></button>
+
         </ul>
         
      </header>
