--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
-    <!-- header-start -->
-     <header>
+    <header>
+            <!-- nav-start -->
+     <nav>
+
         <a href="#"><img src="assets/logo.png" alt="logo"></a>
         <ul>
             <li><a href="#">Home</a></li>
@@ -20,11 +24,11 @@
             <li><a href="#"> Education </a></li>
             <li><a href="#"> Works</a></li>
             <li><a href="#"> Experience</a></li>
-            <button class="contact-button"><a href="#">Contact Me</a></button>
+            <button class="contact-button">Contact Me</button>
 
         </ul>
         
-     </header>
+     </nav>
      <!-- hero-section -->
       <div class="hero-section">
         <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Flinkedin.com%2Fin%2Fhttps%253A%252F%252Fwww.linkedin.com%252Fin%252Frgxfigure%252F%3Ffbclid%3DIwZXh0bgNhZW0CMTAAAR0RTXggI8Usl7HK62sXOuQnCqFSj3Jl7OO3yRPGemxmbSMsHZaJwZ3u2yI_aem_g96kwq0TGM8lrFzjXpClUA&h=AT3hDjq73zLihl9EF1owwG2Pjd2Pt-43OJWEfGRoOT3t3vIdDDJielsTrGdghoWR6JMFug5yFLcemyIQpx3tAh77VczX7wFo-_-Iq8XeVNmQcHVVQTUCD_98rUS1qpWXLt1i"><img src="assets/roni.jpg" alt="Roni's-image"></a>
@@ -35,7 +39,20 @@
             <p>
                 Hey, I have several years of expertise as a competent creator of graphics. I am a skilled designer. My greatest love is design. My skills include designing business cards, flyers, brochures, logos, advertisements, banners, web banners, and more. For my clientele, I want to do my absolute best. Whenever you need my assistance, don't hesitate to get in touch with me. Always available full-time freelancer. I want my customers to be happy.
             </p>
+            <div class="btn">
+                <button><i class="fa-solid fa-download fa-fade"></i>Download CV</button>
+                <button><i class="fa-solid fa-phone fa-fade"></i>Contact</button>
+            </div>
         </div>
       </div>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
 </html>
